--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -52,6 +52,9 @@
 }
 
 * { box-sizing: border-box; }
+html {
+  overflow-x: hidden;
+}
 html, body {
   margin: 0;
   padding: 0;
